Updates gradle配置文件gradleproperties.md
Auto commit by GitBook Editor